--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
+  background: #414141;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  margin: 125px 0px 50px 0px;
+  color: white;
+  font: 60px "Century Gothic", Futura, sans-serif;
+  font-weight: bold;
+}
+
+footer {
+  display: flex;
+  color: #8a8a8a;
+  font: 16px "Century Gothic", Futura, sans-serif;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.button {
+  width: 290px;
+  height: 60px;
+  font: 30px "Century Gothic", Futura, sans-serif;
+  background: #9f9f9f;
+  color: white;
+  border-style: solid;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.icon {
+  width: 30px;
+}
+
+.icon-button {
+  background: transparent;
+  border: none;
+}
+
